<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10sp"
        android:layout_marginBottom="@dimen/margin_10sp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="fer.jureknezovic.smartlock.SettingsActivity">

        <TextView
            android:id="@+id/titleOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/oldPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleOldPassword"
            android:layout_marginEnd="@dimen/margin_50sp"
            android:layout_marginLeft="@dimen/margin_50sp"
            android:layout_marginRight="@dimen/margin_50sp"
            android:layout_marginStart="@dimen/margin_50sp"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/titleNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldPassword"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/enterNewPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleNewPassword"
            android:layout_marginEnd="@dimen/margin_50sp"
            android:layout_marginLeft="@dimen/margin_50sp"
            android:layout_marginRight="@dimen/margin_50sp"
            android:layout_marginStart="@dimen/margin_50sp"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/titleConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPassword"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/confirmPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleConfirmPassword"
            android:layout_marginEnd="@dimen/margin_50sp"
            android:layout_marginLeft="@dimen/margin_50sp"
            android:layout_marginRight="@dimen/margin_50sp"
            android:layout_marginStart="@dimen/margin_50sp"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:textAlignment="center"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/passwordSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/confirmNewPassword"
            android:layout_marginBottom="@dimen/margin_50sp"
            android:layout_marginEnd="@dimen/margin_text"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"
            android:layout_marginStart="@dimen/margin_text"
            android:checked="true"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/passwordPutThrough"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/buttonApplyPassword"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/passwordSwitch"
            android:layout_margin="@dimen/margin_10sp"
            android:background="@drawable/circle_apply"
            app:srcCompat="@drawable/ic_checkmark"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/buttonCancelPassword"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/passwordSwitch"
            android:layout_margin="@dimen/margin_10sp"
            android:background="@drawable/circle_cancel"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</ScrollView>

